tests/spec/pass/list_extend_insert_methods.aja
nums = [1, 2]
nums.extend([3, 4])
print(nums)

nums.insert(0, 9)
nums.insert(3, 8)
nums.insert(length(nums), 7)
print(nums)

empty = []
empty.extend([1, 2])
print(empty)

words = []
words.insert(0, "a")
words.extend(["b", "c"])
print(words)
