tests/spec/fail/list_insert_index_non_int.aja
nums = [1]
nums.insert("0", 2)
